# logxx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/logxx/: append_entry_result.h  append_entry_status.h  basic_ledger.hpp  basic_logstream.hpp  fixed_ledger.h  fixed_logstream.h  variable_ledger.h  variable_logstream.h
src/: CMakeLists.txt  fixed_ledger.cxx  fixed_logstream.cxx  variable_ledger.cxx  variable_logstream.cxx
test/: CMakeLists.txt  commitlog.cxx  consumequeue.cxx  message.cxx  message.h
